--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".RecordsActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rview"
+    android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/lv_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never">
-    </android.support.v7.widget.RecyclerView>
-
+        android:layout_height="wrap_content"></ListView>
 
 </LinearLayout>
