--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -9,7 +9,7 @@
     tools:context=".WritingActivity">
 
     <Button
-        android:id="@+id/imageButton"
+        android:id="@+id/btn"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginStart="10dp"
@@ -18,7 +18,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/add_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -27,7 +27,7 @@
         android:textSize="18sp"
         android:text="2018/10/23 11:23" />
     <EditText
-        android:layout_below="@+id/time"
+        android:layout_below="@+id/add_time"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
