--- a/app/src/main/res/menu/add_records.xml
+++ b/app/src/main/res/menu/add_records.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/back_bookshelf"
+        android:icon="@drawable/left_circle"
+        android:title="Item"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/it_search"
+        android:title="title"
+       android:icon="@drawable/search16"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/it_add"
-        android:icon="@drawable/add"
+        android:icon="@drawable/addnew"
         android:title="Item"
         app:showAsAction="always" />
 </menu>
